0-deprecated-stuff/applications/guru/guru-apps/ingress/production/flask-helper-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: "bhagwan.abhra.shambhala.cloud"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: flask-helper-service
              port: 
                number: 5000
  tls:
    - hosts: 
        - "bhagwan.abhra.shambhala.cloud"
      secretName: bhagwan-cert
