0-deprecated-stuff/applications/guru/guru-apps/ingress/production/leaderboard-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leaderboard-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: "skor.abhra.shambhala.cloud"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: leaderboard-service
              port:
                number: 8090
  tls:
    - hosts:
        - "skor.abhra.shambhala.cloud"
      secretName: leaderboard-cert
